filter by and order by - sprint3

--- a/index.html
+++ b/index.html
@@ -19,16 +19,15 @@
     <div class="container">
         <div class="row">
             <div id="msg" class="col-sm-10 offset-sm-1 ">
-                <!--<div class="alert alert-warning">Contato não encontrado.</div>-->
             </div>
         </div>
 
-        <form class ="form" id="form-contato">
+        <form class="form" id="form-contato">
             <div class="form-group row">
-                  <div class="col-sm-5">
+                <div class="col-sm-5">
                     <label for="inputId">N° Operação</label>
                     <input type="text" class="form-control" id="inputId" placeholder="N° Operação" disabled>
-                </div>  
+                </div>
                 <div class="col-sm-5">
                     <label for="inputNome">Valor</label>
                     <input type="text" class="form-control" id="inputNome" required
@@ -38,18 +37,11 @@
             <div class="form-group row">
                 <div class="col-sm-5">
                     <label for="inputTelefone">Descrição</label>
-                    <input type="text" class="form-control" id="inputTelefone" required placeholder="Insira aqui a descrição da operação">
+                    <input type="text" class="form-control" id="inputTelefone" required
+                        placeholder="Insira aqui a descrição da operação">
                 </div>
-                <!-- <div class="col-sm-7">
-                    <label for="inputEmail">E-mail (*)</label>
-                    <input type="email" class="form-control" id="inputEmail" required placeholder="Informe o e-mail">
-                </div> -->
             </div>
             <div class="form-group row">
-                <!-- <div class="col-sm-6">
-                    <label for="inputCidade">Cidade</label>
-                    <input type="text" class="form-control" id="inputCidade" placeholder="Informe a cidade do contato" >
-                </div> -->
                 <div class="col-sm-5">
                     <label for="inputCategoria">Categoria</label>
                     <input type="text" class="form-control" id="inputCategoria" required
@@ -59,7 +51,8 @@
             <div class="form-group row">
                 <div class="col-sm-5">
                     <label for="inputSite">Tipo</label>
-                    <input type="text" class="form-control" id="inputSite" required placeholder="Insira o tipo da transação">
+                    <input type="text" class="form-control" id="inputSite" required
+                        placeholder="Insira o tipo da transação">
                 </div>
             </div>
             <div class="form-group row">
@@ -73,9 +66,21 @@
                     <input type="button" class="btn btn-warning" id="btnUpdate" value="Editar Operação">
                     <input type="button" class="btn btn-danger" id="btnDelete" value="Excluir Operação">
                     <input type="button" class="btn btn-secondary" id="btnClear" value="Limpar Form">
-                   <!-- <a href="lista_contatos.html"><input type="button" class="btn btn-warning" id="btnClear"
-                            value="Pesquisar Contatos"></a> -->
                 </div>
+                <div class="row mb-2 fai">
+                    <div class="col-sm-4 fai">
+                        <button id="btnSort" class="btn btn-primary">Ordenar por Valor</button>
+                    </div>
+                    <div class="col-sm-4 fai">
+                        <input type="text" class="form-control" id="filterCategoria" placeholder="Filtro por Tipo">
+                        <button id="btnFilter" class="btn btn-secondary">Aplicar</button>
+                    </div>
+                    <div class="col-sm-4 fai">
+                        <button id="btnShowAll" class="btn btn-info">Mostrar Todas</button>
+                    </div>
+
+                </div>
+
             </div>
         </form>
         <hr>
@@ -107,155 +112,7 @@
     </div>
 
     <script src="app.js"></script>
-    <script>
-        function exibeContatos() {
-            tableContatos = document.getElementById("table-contatos");
 
-            // Remove todas as linhas do corpo da tabela
-            tableContatos.innerHTML = "";
-
-            readContato(dados => {
-                // Popula a tabela com os registros do banco de dados
-                for (i = 0; i < dados.length; i++) {
-                    let contato = dados[i];
-                    tableContatos.innerHTML += `<tr><td scope="row">${contato.id}</td>
-                                                    <td>${contato.valor}</td>
-                                                    <td>${contato.descrição}</td>
-                                                    <td>${contato.categoria}</td>
-                                                    <td>${contato.tipo}</td>
-                                                </tr>`;
-                }
-            })
-        }
-
-        function init() {
-            // Define uma variável para o formulário de contato
-            formContato = document.getElementById("form-contato");
-
-            // Adiciona funções para tratar os eventos 
-            btnInsert = document.getElementById("btnInsert");
-            btnInsert.addEventListener('click', function () {
-                // Verifica se o formulário está preenchido corretamente
-                if (!formContato.checkValidity()) {
-                    displayMessage("Preencha o formulário corretamente.");
-                    return;
-                }
-
-                // Obtem os valores dos campos do formulário
-                let campoNome = document.getElementById('inputNome').value;
-                let campoTelefone = document.getElementById('inputTelefone').value;
-                //let campoEmail = document.getElementById ('inputEmail').value;
-                //let campoCidade = document.getElementById ('inputCidade').value;
-                let campoCategoria = document.getElementById('inputCategoria').value;
-                let campoSite = document.getElementById('inputSite').value;
-
-                // Cria um objeto com os dados do contato
-                let contato = {
-                    valor: campoNome,
-                    descrição: campoTelefone,
-                    //email: campoEmail, 
-                    //cidade: campoCidade, 
-                    categoria: campoCategoria,
-                    tipo: campoSite
-                };
-
-                // Cria o contato no banco de dados
-                createContato(contato, exibeContatos);
-
-                // Limpa o formulario
-                formContato.reset()
-            });
-
-            // Trata o click do botão Alterar
-            btnUpdate = document.getElementById("btnUpdate");
-            btnUpdate.addEventListener('click', function () {
-                // Obtem os valores dos campos do formulário
-                let campoId = document.getElementById("inputId").value;
-                if (campoId == "") {
-                    displayMessage("Selecione antes uma operação para ser alterada.");
-                    return;
-                }
-
-                // Obtem os valores dos campos do formulário
-                let campoNome = document.getElementById('inputNome').value;
-                let campoTelefone = document.getElementById('inputTelefone').value;
-                // let campoEmail = document.getElementById('inputEmail').value;
-                // let campoCidade = document.getElementById('inputCidade').value;
-                let campoCategoria = document.getElementById('inputCategoria').value;
-                let campoSite = document.getElementById('inputSite').value;
-
-                // Cria um objeto com os dados do contato
-                let contato = {
-                    valor: campoNome,
-                    descrição: campoTelefone,
-                    //email: campoEmail, 
-                    //cidade: campoCidade, 
-                    categoria: campoCategoria,
-                    tipo: campoSite
-                };
-
-                // Altera o contato no banco de dados
-                updateContato(parseInt(campoId), contato, exibeContatos);
-
-                // Limpa o formulario
-                formContato.reset()
-            });
-
-            // Trata o click do botão Excluir
-            btnDelete = document.getElementById('btnDelete');
-            btnDelete.addEventListener('click', function () {
-                let campoId = document.getElementById('inputId').value;
-                if (campoId == "") {
-                    displayMessage("Selecione uma operação a ser excluída.");
-                    return;
-                }
-
-                // Exclui o contato no banco de dados
-                deleteContato(parseInt(campoId), exibeContatos);
-
-                // Limpa o formulario
-                formContato.reset()
-            });
-
-            // Trata o click do botão Listar Contatos
-            btnClear = document.getElementById('btnClear');
-            btnClear.addEventListener('click', function () {
-                formContato.reset()
-            });
-
-            // Oculta a mensagem de aviso após alguns 5 segundos
-            msg = document.getElementById('msg');
-            msg.addEventListener("DOMSubtreeModified", function (e) {
-                if (e.target.innerHTML == "") return;
-                setTimeout(function () {
-                    alert = msg.getElementsByClassName("alert");
-                    alert[0].remove();
-                }, 5000);
-            })
-
-            // Preenche o formulário quando o usuario clicar em uma linha da tabela 
-            gridContatos = document.getElementById("grid-contatos");
-            gridContatos.addEventListener('click', function (e) {
-                if (e.target.tagName == "TD") {
-
-                    // Obtem as colunas da linha selecionada na tabela
-                    let linhaContato = e.target.parentNode;
-                    colunas = linhaContato.querySelectorAll("td");
-
-                    // Preenche os campos do formulário com os dados da linha selecionada na tabela
-                    document.getElementById('inputId').value = colunas[0].innerText;
-                    document.getElementById('inputNome').value = colunas[1].innerText;
-                    document.getElementById('inputTelefone').value = colunas[2].innerText;
-                    document.getElementById('inputCategoria').value = colunas[3].innerText;
-                    document.getElementById('inputSite').value = colunas[4].innerText;
-                    // document.getElementById('inputCategoria').value = colunas[5].innerText;
-                    // document.getElementById('inputSite').value = colunas[6].innerText;
-                }
-            });
-
-            exibeContatos();
-        }
-    </script>
 </body>
 
 </html>
